src/test/deca/context/invalid/class/return_in_void_method.deca
// Description:
// 	  use new declaration in a method of an undefined type 
//
// Resultats:
// 	NO_RETURN_IN_VOID_METHOD: Cannot return in void method
//  line 15
// Historique:
// 	  cree le 15/01/2023

class B {
    
    protected float x;
    void methodA() {}
    void methodB() {
        return 2;
    }
}
{
    B objectB = new B();
    int x = objectB.methodB();
}
